# cmake-nRF5x

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMake_nRF5x.cmake  LICENSE  README.md  arm-gcc-toolchain.cmake  cmds.txt  pyrightconfig.json  readme.md
.github/workflows/: .github-ci.yml
ble_app_blinky/: CMakeLists.txt  cmds.txt  main.c
ble_app_blinky_c/: CMakeLists.txt  cmds.txt  main.c
ci/: README.md
ci/data/: modules_builtin.json  modules_cmake.json
ci/examples/ble_central/ble_app_blinky_c/: CMakeLists.txt
ci/examples/ble_central/ble_app_blinky_c/pca10056_s140/: ble_app_blinky_c_gcc_nrf52.ld  sdk_config.h
ci/examples/ble_central/ble_app_ipsp_initiator/: CMakeLists.txt
ci/examples/ble_peripheral/ble_app_bms/: CMakeLists.txt
ci/examples/ble_peripheral/ble_app_eddystone/: CMakeLists.txt
ci/examples/ble_peripheral/ble_app_hids_keyboard/: CMakeLists.txt
ci/examples/ble_peripheral/ble_app_pwr_profiling/: CMakeLists.txt
ci/examples/ble_peripheral/ble_app_uart/: CMakeLists.txt
ci/examples/peripheral/blinky/: CMakeLists.txt
ci/examples/peripheral/bsp/: CMakeLists.txt
ci/examples/peripheral/cli/: CMakeLists.txt
ci/examples/peripheral/fatfs/: CMakeLists.txt
ci/examples/peripheral/flash_fstorage/: CMakeLists.txt
ci/examples/peripheral/gpiote/: CMakeLists.txt
ci/examples/peripheral/led_softblink/: CMakeLists.txt
ci/examples/peripheral/pin_change_int/: CMakeLists.txt
ci/examples/peripheral/pwm_library/: CMakeLists.txt
ci/examples/peripheral/rtc/: CMakeLists.txt
ci/examples/peripheral/serial/: CMakeLists.txt
ci/examples/peripheral/simple_timer/: CMakeLists.txt
ci/examples/peripheral/spi_master_using_nrf_spi_mngr/: CMakeLists.txt
ci/examples/peripheral/temperature/: CMakeLists.txt
ci/examples/peripheral/template_project/: CMakeLists.txt
ci/examples/peripheral/timer/: CMakeLists.txt
ci/examples/peripheral/twi_master_using_nrf_twi_mngr/: CMakeLists.txt
ci/examples/peripheral/uart/: CMakeLists.txt
ci/examples/peripheral/usbd_hid_generic/: CMakeLists.txt
ci/examples/peripheral/wdt/: CMakeLists.txt
ci/examples_custom/dfu/open_bootloader_usb/: CMakeLists.txt  configs.json
ci/libraries/: README.md  nrf5.json  nrf5_app.json  nrf5_ble.json  nrf5_ble_pm.json  nrf5_ble_srv.json  nrf5_bsp.json  nrf5_builtin.json  nrf5_common.json  nrf5_crypto.json  nrf5_dfu.json  nrf5_drv.json  nrf5_external.json  nrf5_external_libs.json  nrf5_iot.json  nrf5_log.json  nrf5_misc.json  nrf5_nrfx.json  nrf5_storage.json  nrf5_usbd.json
ci/libraries_tests/nrf5_app_button/: CMakeLists.txt  main.c  sdk_config.h
ci/libraries_tests/nrf5_app_error/: CMakeLists.txt  main.c
ci/libraries_tests/nrf5_app_fifo/: CMakeLists.txt  main.c  sdk_config.h
ci/libraries_tests/nrf5_app_pwm/: CMakeLists.txt  main.c
ci/libraries_tests/nrf5_app_scheduler/: CMakeLists.txt  main.c  sdk_config.h
ci/libraries_tests/nrf5_app_sdcard/: CMakeLists.txt  main.c
ci/libraries_tests/nrf5_app_simple_timer/: CMakeLists.txt  main.c
ci/libraries_tests/nrf5_app_timer/: CMakeLists.txt  main.c  sdk_config.h
ci/libraries_tests/nrf5_app_timer_v2/: CMakeLists.txt  sdk_config.h
ci/libraries_tests/nrf5_app_uart/: CMakeLists.txt  sdk_config.h
ci/libraries_tests/nrf5_app_uart_fifo/: CMakeLists.txt  main.c  sdk_config.h
ci/libraries_tests/nrf5_app_usbd/: CMakeLists.txt  main.c  sdk_config.h
ci/libraries_tests/nrf5_app_usbd_audio/: CMakeLists.txt  main.c  sdk_config.h
ci/libraries_tests/nrf5_app_usbd_cdc_acm/: CMakeLists.txt  main.c  sdk_config.h
ci/libraries_tests/nrf5_app_usbd_dummy/: CMakeLists.txt  main.c  sdk_config.h
ci/libraries_tests/nrf5_app_usbd_hid/: CMakeLists.txt  main.c  sdk_config.h
ci/libraries_tests/nrf5_app_usbd_hid_generic/: CMakeLists.txt  main.c  sdk_config.h
ci/libraries_tests/nrf5_app_usbd_hid_kbd/: CMakeLists.txt  main.c  sdk_config.h
ci/libraries_tests/nrf5_app_usbd_hid_mouse/: CMakeLists.txt  main.c  sdk_config.h
ci/libraries_tests/nrf5_app_usbd_msc/: CMakeLists.txt  main.c  sdk_config.h
ci/libraries_tests/nrf5_app_usbd_nrf_dfu_trigger/: CMakeLists.txt  main.c  sdk_config.h
ci/libraries_tests/nrf5_app_usbd_serial_num/: CMakeLists.txt  main.c  sdk_config.h
ci/libraries_tests/nrf5_app_util_platform/: CMakeLists.txt  main.c
ci/libraries_tests/nrf5_assert/: CMakeLists.txt  main.c
ci/libraries_tests/nrf5_atfifo/: CMakeLists.txt  main.c
ci/libraries_tests/nrf5_atflags/: CMakeLists.txt  main.c
ci/libraries_tests/nrf5_atomic/: CMakeLists.txt  main.c
ci/libraries_tests/nrf5_balloc/: CMakeLists.txt  main.c
ci/libraries_tests/nrf5_ble_advertising/: CMakeLists.txt  main.c  sdk_config.h
ci/libraries_tests/nrf5_ble_auth_status_tracker/: CMakeLists.txt  main.c
ci/libraries_tests/nrf5_ble_common/: CMakeLists.txt  main.c
ci/libraries_tests/nrf5_ble_db_discovery/: CMakeLists.txt  main.c  (+1 more)
ci/scripts/: README.md  analyze_data.py  build.sh  build_all.sh  build_all_examples.sh  build_all_libraries.sh  build_custom_example.sh  build_example.sh  build_library.sh  check_coverage.sh  clean.sh  collect_data.sh  generate_cmake.sh  generate_cmake_tests.sh  generate_example.sh  generate_libraries.sh  generate_modules.sh  prepare.sh  run_tests.sh  scrape_cmake.sh  scrape_makefiles.sh
ci/templates/: cmake_common.j2  cmake_example.j2  cmake_groups.j2  cmake_libraries.j2  cmake_libraries_tests.j2
cmake/: arm-none-eabi.cmake  nrf5.cmake  nrf5_app.cmake  nrf5_ble.cmake  nrf5_ble_pm.cmake  nrf5_ble_srv.cmake  nrf5_bsp.cmake  nrf5_common.cmake  nrf5_crypto.cmake  nrf5_dfu.cmake  nrf5_drv.cmake  nrf5_external.cmake  nrf5_external_blob.cmake  nrf5_external_libs.cmake  nrf5_groups.cmake  nrf5_helpers.cmake  nrf5_iot.cmake  nrf5_log.cmake  nrf5_misc.cmake  nrf5_nrfx.cmake  nrf5_storage.cmake  nrf5_usbd.cmake  nrf5_utils.cmake  nrf5_validate.cmake
config/: app_config.h
example/: CMakeLists.txt
examples/ble_blinky/: .gitignore  CMakeLists.txt  build.sh  flash.sh  nrf-toolchain.cmake
examples/ble_blinky/src/: CMakeLists.txt
examples/blinky/: CMakeLists.txt  README.md  flash.sh  nrf-toolchain.cmake
examples/blinky/src/: CMakeLists.txt
src/: main.c
(+568 files in other folders)
